tests/NormalTests/paczka2/big_fuzzy/84864020.err
Error in line 12: zrVG A222 56,1
Error in line 6: A431 S468 39,4
Error in line 25: Bl9HYq A431 4,8
Error in line 27: rXL6ITu1 S468 6,1
Error in line 23: busTky A222 9,5
Error in line 28: rXL6ITu1 S651 43,6
Error in line 17: A431 A222 74,6
Error in line 26: Bl9HYq S468 90,1
Error in line 42: busTky A431 63,9
Error in line 39: A431 S651 85,3
Error in line 46: busTky S468 62,9
Error in line 52: Bl9HYq S651 8,5
Error in line 57: bm6u A222 95,2
Error in line 63: 5rRC A222 29,4
Error in line 84: busTky S468 -2,0
Error in line 101: Bl9HYq S468 50,7
Error in line 77: busTky S468 334,8
Error in line 114: 5rRC A431 91,0
Error in line 108: A431 S651 17,4
Error in line 122: A431 A222 64,2
Error in line 124: rXL6ITu1 A222 137,1
Error in line 137: busTky S651 65,7
Error in line 141: zrVG A222 3,6
Error in line 109: Bl9HYq A222 2,0
Error in line 166: rXLþITu1 Sþ51 2,þ
Error in line 169: rXL6ITu1 S651 10,3
Error in line 162: bm6u A431 22,7
Error in line 181: bmju Sj51 319,j
Error in line 172: 5rRC S651 2,4
Error in line 173: zrVG S468 120,6
Error in line 195: 5rRC S468 71,2
Error in line 192: busTky S468 49,1
Error in line 210: busTky S468 97,9
Error in line 232: Bl9HYq A431 55,6
Error in line 233: Bl9HYq S468 91,5
Error in line 222: zrVG S651 74,7
